# Eratosthenes

./: Cargo.toml  README.md
src/: algo_render.rs  main.rs  sieve.rs
